Login page updated

--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 
 <body>
     <!-- header -->
-    <header>
+    <!-- <header>
         <nav>
             <div class="logo"><img src="image/logo3.png"></div>
             <div class="rightside"></div>
@@ -27,7 +27,7 @@
             </ul>
 
         </nav>
-    </header>
+    </header> -->
 
     <!-- form -->
     <div class="container" id="container">
